test: RacingGame test 추가