@@ -3,6 +3,7 @@ package racingcar;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.List;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import racingcar.controller.dto.RacingCarDto;
 import racingcar.model.RacingCar;
@@ -10,24 +11,48 @@ import racingcar.model.RacingGame;
 import racingcar.model.RandomValueGenerator;
 
 class RacingGameTest {
-
     @Test
-    void getWinners() {
+    @DisplayName("moves(): ")
+    void moves() {
         List<RacingCar> racingCars = List.of(
-                new RacingCar("1번"),
-                new RacingCar("2번"),
-                new RacingCar("3번")
+                new RacingCar("car1", 1),
+                new RacingCar("car2", 2),
+                new RacingCar("car3", 3)
         );
-        RacingGame racingGame = new RacingGame(racingCars, new TempGenerator());
+        RacingGame racingGame = new RacingGame(racingCars);
 
-        racingGame.moves();
-        List<RacingCarDto> winners = racingGame.getWinners();
+        List<Integer> moveResults = racingGame.moves(new MoveGenerator())
+                .stream()
+                .map(RacingCarDto::location)
+                .toList();
 
-        assertThat(winners).hasSize(3);
-        assertThat(winners.getFirst().location()).isEqualTo(1);
+        assertThat(moveResults).hasSize(3);
+        assertThat(moveResults.get(0)).isEqualTo(2);
+        assertThat(moveResults.get(1)).isEqualTo(3);
+        assertThat(moveResults.get(2)).isEqualTo(4);
+
     }
 
-    private static class TempGenerator implements RandomValueGenerator {
+    @Test
+    @DisplayName("getWinners(): 중복 우승자")
+    void getWinners() {
+        //given
+        List<RacingCar> racingCars = List.of(
+                new RacingCar("우승자1", 2),
+                new RacingCar("우승자2", 2),
+                new RacingCar("일반", 0)
+        );
+        RacingGame racingGame = new RacingGame(racingCars);
+
+        //when
+        List<RacingCarDto> winners = racingGame.getWinners();
+
+        //then
+        assertThat(winners).hasSize(2);
+        assertThat(winners.getFirst().location()).isEqualTo(2);
+    }
+
+    private static class MoveGenerator implements RandomValueGenerator {
         @Override
         public int generate() {
             return RacingCar.MOVE_THRESHOLD;
